5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4254/executions/1575_2896.log
== TEST (2019-03-12 23:17:34) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input(Digite o nome: Roggerio)


# Impressao de saidas
print()
-- ERROR:
File "XXXX", line 4
    var = input(Digite o nome: Roggerio)
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 23:22:14) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("Digite o nome: Roggerio"
			  )

# Impressao de saidas
print()
-- OUTPUT:
Digite o nome: Roggerio
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 23:22:55) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("Digite o nome: Roggerio)
				

# Impressao de saidas
print()
-- ERROR:
File "XXXX", line 4
    var = input("Digite o nome: Roggerio)
                                        ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 23:23:17) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("Digite o nome: Roggerio")


# Impressao de saidas
print()
-- ERROR:
File "XXXX", line 4
    var = input("Digite o nome: Roggerio)
                                        ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 23:26:54) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("Digite o nome: Roggerio")


# Impressao de saidas
print(var)
-- OUTPUT:
Ada_Lovelace
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 23:36:59) 
-- CODE:
# Use este codigo como ponto de partida
"Roggerio"
# Leitura de valores de entrada
var = input("Digite o nome:Rogg")

# Impressao de saidas
print(var)
-- OUTPUT:
Ada_Lovelace
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 23:37:05) 
-- CODE:
# Use este codigo como ponto de partida
"Roggerio"
# Leitura de valores de entrada
var = input("Digite o nome:Rogg")

# Impressao de saidas
print(var)
-- EXECUTION TIME:
0.15414
-- TEST CASE 1:
---- input:
Ada_Lovelace
---- correct output:
Ada_Lovelace
---- user output:
Ada_Lovelace
-- TEST CASE 2:
---- input:
Teste
---- correct output:
Teste
---- user output:
Teste
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 23:40:27) 
-- CODE:
# Use este codigo como ponto de partida
"Roggerio"
# Leitura de valores de entrada
var = input("Digite o nome:Rogg")

# Impressao de saidas
print(var)
-- OUTPUT:
Ada_Lovelace
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 23:40:46) 
-- CODE:
# Use este codigo como ponto de partida
"Roggerio"
# Leitura de valores de entrada
var = input("Rogg")

# Impressao de saidas
print(var)
-- EXECUTION TIME:
0.159486
-- TEST CASE 1:
---- input:
Ada_Lovelace
---- correct output:
Ada_Lovelace
---- user output:
Ada_Lovelace
-- TEST CASE 2:
---- input:
Teste
---- correct output:
Teste
---- user output:
Teste
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 23:40:50) 
-- CODE:
# Use este codigo como ponto de partida
"Roggerio"
# Leitura de valores de entrada
var = input("Rogg")

# Impressao de saidas
print(var)
-- OUTPUT:
Ada_Lovelace
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 00:14:31) 
-- CODE:
# Use este codigo como ponto de partida
"Roggerio"
# Leitura de valores de entrada
var = input("Rogg")

# Impressao de saidas
print(var)
-- OUTPUT:
Ada_Lovelace
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
